# somoy

./: .gitignore  Cargo.toml
src/: errors.rs  exif_raw.rs  lib.rs  main.rs  traits.rs
