[package]
name = "somoy"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
kamadak-exif = "0.5.4"
libraw_r = { version = "0.8", features = ["exif"], registry = "ktra" }
xmp = { git = "https://github.com/aftershootco/xmp", version = "0.9.3" }
thiserror = "1.0.31"

[features]
